--- a/Daenet.Common.Logging.Sql.Test/Daenet.Common.Logging.Sql.Test.csproj
+++ b/Daenet.Common.Logging.Sql.Test/Daenet.Common.Logging.Sql.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>    
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Daenet.SqlServerLogger\Daenet.SqlServerLogger.csproj" />
+    <ProjectReference Include="..\Daenet.SqlServerLogger\Daenet.Common.Logging.Sql.csproj" />
   </ItemGroup>
 
   <ItemGroup>
