--- a/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
+++ b/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.5</Version>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>A .NET Core logger provider to log directly into a SQL Database.</Description>
     <Authors>daenet</Authors>
     <Company>daenet Gesellschaft für Informationstechnologie mbH</Company>
