use project reference instead of nuget package for better debugging

--- a/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
+++ b/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
@@ -10,12 +10,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Daenet.Common.Logging.Sql" Version="1.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Daenet.Common.Logging.Sql\Daenet.Common.Logging.Sql.csproj" />
   </ItemGroup>
 
 </Project>
