--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -17,7 +17,7 @@
       }
     },
     "SqlProviderSettings": {
-      "ConnectionString": "ConnectionString",
+      "ConnectionString": "Server=tcp:daenetdevserver2.database.windows.net,1433;Initial Catalog=studentdb;Persist Security Info=False;User ID=ddobric;Password=daenet$2017;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
       "TableName": "sampleapp",
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
