--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -17,11 +17,14 @@
       }
     },
     "SqlProviderSettings": {
-      "ConnectionString": "Server=tcp:daenetdevserver2.database.windows.net,1433;Initial Catalog=studentdb;Persist Security Info=False;User ID=ddobric;Password=daenet$2017;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-      "TableName": "sampleapp",
+      "ConnectionString": "Server=tcp:afs-dev-96d524.database.windows.net,1433;Initial Catalog=db;Persist Security Info=False;User ID=afssqladmin;Password=S5A8zRVTJLPFw3B26fScKTAmW;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "TableName": "SqlLog",
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
-      "IgnoreLoggingErrors": false
+      "IgnoreLoggingErrors": false,
+      "ScopeColumnMapping": {
+        "RequestId": "RequestId"
+      }
     }
   }
 }
