--- a/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
+++ b/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>8073274d-2e81-4ee8-90a4-6e9fd47b3879</UserSecretsId>
   </PropertyGroup>
 
