--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -17,7 +17,7 @@
       }
     },
     "SqlProviderSettings": {
-      "ConnectionString": "Server=tcp:afs-dev-96d524.database.windows.net,1433;Initial Catalog=db;Persist Security Info=False;User ID=afssqladmin;Password=S5A8zRVTJLPFw3B26fScKTAmW;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "ConnectionString": "",
       "TableName": "SqlLog",
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
