Cached scope in GetScopeInformation

--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -17,13 +17,14 @@
       }
     },
     "SqlProviderSettings": {
-      "ConnectionString": "Server=tcp:afs-dev-96d524.database.windows.net,1433;Initial Catalog=db;Persist Security Info=False;User ID=afssqladmin;Password=S5A8zRVTJLPFw3B26fScKTAmW;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+      "ConnectionString": "Server=tcp:iv0qopz2zg.database.windows.net,1433;Initial Catalog=SqlLoggerTest;Persist Security Info=False;User ID=prenner;Password=4bbEit!?;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
       "TableName": "SqlLog",
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
       "IgnoreLoggingErrors": false,
       "ScopeColumnMapping": {
-        "RequestId": "RequestId"
+        "RequestId": "RequestId",
+        "SCOPEPATH":  "Scope",
       }
     }
   }
