upgrade to .net core 3 and update packages

--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -24,7 +24,7 @@
       "IgnoreLoggingErrors": false,
       "ScopeColumnMapping": {
         "RequestId": "RequestId",
-        "SCOPEPATH":  "Scope",
+        "SCOPEPATH": "Scope"
       }
     }
   }
