build column mapping only once and implement RunInsertTimer

--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -19,6 +19,8 @@
     "SqlProviderSettings": {
       "ConnectionString": "",
       "TableName": "SqlLog",
+      "BatchSize": 20,
+      "InsertTimerInSec": 60,
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
       "IgnoreLoggingErrors": false,
