--- a/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
+++ b/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.7.1</Version>
+    <Version>1.0.7.1-preview</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>A .NET Core logger provider to log directly into a SQL Database.</Description>
     <Authors>daenet</Authors>
