Moved SqlProviderSettings to SqlProvider section

--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -14,9 +14,7 @@
     "SqlProvider": {
       "LogLevel": {
         "Default": "Information"
-      }
-    },
-    "SqlProviderSettings": {
+      },
       "ConnectionString": "",
       "TableName": "SqlLog",
       "BatchSize": 20,
@@ -24,6 +22,7 @@
       "CreateTblIfNotExist": true,
       "IncludeExceptionStackTrace": false,
       "IgnoreLoggingErrors": false,
+      "ScopeSeparator": "=>",
       "ScopeColumnMapping": {
         "RequestId": "RequestId",
         "SCOPEPATH": "Scope"
