implement throwing exception if batchsize == 1 and remove some useless files. LogTable.txt is documented in readme

--- a/Daenet.Common.SampleApp/appsettings.json
+++ b/Daenet.Common.SampleApp/appsettings.json
@@ -17,15 +17,11 @@
       },
       "ConnectionString": "",
       "TableName": "SqlLog",
-      "BatchSize": 20,
+      "BatchSize": 1,
       "InsertTimerInSec": 60,
       "IncludeExceptionStackTrace": false,
       "IgnoreLoggingErrors": false,
-      "ScopeSeparator": "=>",
-      "ScopeColumnMapping": {
-        "RequestId": "RequestId",
-        "SCOPEPATH": "Scope"
-      }
+      "ScopeSeparator": "=>"
     }
   }
 }
