--- a/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
+++ b/Daenet.Common.Logging.Sql/Daenet.Common.Logging.Sql.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.7.2</Version>
+    <Version>1.0.8.2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Description>A .NET Core logger provider to log directly into a SQL Database.</Description>
     <Authors>daenet</Authors>
@@ -12,6 +12,10 @@
     <RepositoryUrl>https://github.com/daenetCorporation/Daenet.Common.Logging.Sql.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/daenetCorporation/Daenet.Common.Logging.Sql</PackageProjectUrl>
     <PackageTags>ilogger asp-net-core net-core core sql</PackageTags>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <AssemblyVersion>1.0.8.2</AssemblyVersion>
+    <FileVersion>1.0.8.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
