--- a/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
+++ b/Daenet.Common.SampleApp/Daenet.Common.SampleApp.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
+    <LangVersion>14.0</LangVersion>
     <UserSecretsId>8073274d-2e81-4ee8-90a4-6e9fd47b3879</UserSecretsId>
   </PropertyGroup>
 
